# cookiecutter-fastapi

./: .gitignore  README.md  bootstrap.sh  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .env.example  Dockerfile  README.md  docker-compose.yaml  logging_config.yaml  pyproject.toml  pytest.ini  setup.sh  start.sh
{{ cookiecutter.project_slug }}/app/: config.py  database.py  dependencies.py  main.py  schemas.py
{{ cookiecutter.project_slug }}/app/api/: __init__.py
{{ cookiecutter.project_slug }}/app/api/dependencies/: __init__.py  auth.py  db.py
{{ cookiecutter.project_slug }}/app/api/routes/: index.py
{{ cookiecutter.project_slug }}/app/database/: __init__.py  lifecycle.py  session.py
{{ cookiecutter.project_slug }}/app/exceptions/: domain.py  handlers.py  http.py
{{ cookiecutter.project_slug }}/app/repository/: index.py
{{ cookiecutter.project_slug }}/app/schemas/: queries.py  response.py
{{ cookiecutter.project_slug }}/app/services/: index.py
{{ cookiecutter.project_slug }}/app/utils/: time_util.py
{{ cookiecutter.project_slug }}/docker/: entrypoint.sh  init.sql
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_index.py
