[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.description }}"
version = "0.1.0"
authors = [
    {name = "{{ cookiecutter.author }}",email = "{{ cookiecutter.author_email }}"}
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]